--- a/FaceDetectionDemo/Base.lproj/Main.storyboard
+++ b/FaceDetectionDemo/Base.lproj/Main.storyboard
@@ -37,6 +37,42 @@
             </objects>
             <point key="canvasLocation" x="1047.8260869565217" y="137.94642857142856"/>
         </scene>
+        <!--Camera View Controller-->
+        <scene sceneID="zO1-dH-ZFE">
+            <objects>
+                <viewController id="swg-fo-7RK" customClass="CameraViewController" customModule="FaceDetectionDemo" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="8F2-IJ-xoD">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="TZk-24-dWV">
+                                <rect key="frame" x="0.0" y="88" width="414" height="725"/>
+                            </imageView>
+                        </subviews>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <constraints>
+                            <constraint firstItem="TZk-24-dWV" firstAttribute="leading" secondItem="BIr-GA-9z5" secondAttribute="leading" id="R68-Jb-H1P"/>
+                            <constraint firstItem="BIr-GA-9z5" firstAttribute="bottom" secondItem="TZk-24-dWV" secondAttribute="bottom" id="pmj-Jf-JE1"/>
+                            <constraint firstItem="TZk-24-dWV" firstAttribute="top" secondItem="BIr-GA-9z5" secondAttribute="top" id="rS0-yi-gf7"/>
+                            <constraint firstItem="BIr-GA-9z5" firstAttribute="trailing" secondItem="TZk-24-dWV" secondAttribute="trailing" id="uhL-uO-ITS"/>
+                        </constraints>
+                        <viewLayoutGuide key="safeArea" id="BIr-GA-9z5"/>
+                    </view>
+                    <navigationItem key="navigationItem" id="q0X-iq-pBt">
+                        <barButtonItem key="rightBarButtonItem" systemItem="camera" id="QoD-QF-XdD">
+                            <connections>
+                                <action selector="takePhoto:" destination="swg-fo-7RK" id="mNT-9q-vBK"/>
+                            </connections>
+                        </barButtonItem>
+                    </navigationItem>
+                    <connections>
+                        <outlet property="imageView" destination="TZk-24-dWV" id="OQI-Tq-lqG"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="Pqe-a7-2Ya" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1833" y="868"/>
+        </scene>
         <!--Tab Bar Controller-->
         <scene sceneID="Mwg-nw-gWz">
             <objects>
@@ -48,11 +84,31 @@
                     </tabBar>
                     <connections>
                         <segue destination="BYZ-38-t0r" kind="relationship" relationship="viewControllers" id="BQm-Rf-LBM"/>
+                        <segue destination="edD-yU-wFM" kind="relationship" relationship="viewControllers" id="dMg-gI-5Cy"/>
                     </connections>
                 </tabBarController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="4CA-nZ-aeU" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="137.68115942028987" y="137.94642857142856"/>
+        </scene>
+        <!--Item-->
+        <scene sceneID="iwm-eg-Aho">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="edD-yU-wFM" sceneMemberID="viewController">
+                    <tabBarItem key="tabBarItem" title="Item" id="fVg-9s-SM5"/>
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="dyM-nh-rlN">
+                        <rect key="frame" x="0.0" y="44" width="414" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="swg-fo-7RK" kind="relationship" relationship="rootViewController" id="Hil-DW-ROi"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="5mt-uh-zbB" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1048" y="868"/>
         </scene>
     </scenes>
     <resources>
